1.2.17:
	- fix: windows were not expanding when taskbar was hidden
	- fix: reused (hidden) application windows popped up on original
	  workspace	
	- fix: build with --disable-taskbar
	- fix: maximize/restore for rxvt

1.2.17pre2: 2004-10-31
	- fix crash on startup when mailbox or net status disabled
	- fix build with gcc > 3.3
	- fix gray lines on taskbar bottom
	- major changes in window geometry/layout handling
	- fix "tray icon"

1.2.17pre1: 2004-10-24
	- fix \ quoting in configuration files  (Eduard Bloch)
	- fix "win" key when NumLock active
	- more weird modifier map fixesa
	- updated Slovenian translation (Jernej Kovacic)
	- add the button to collapse the task bar
	- rewrite of taskbar layout code
        - force Imlib to use default visual (fix xorg visual mess)
        - vertical layout for Alt+Tab (Eduard Bloch)
	
1.2.16: 2004-08-16
	- fullscreen fix for _NET_WM_STATE_FULLSCREEN (affects mplayer)
	- use our own replacement for basename
	- ACPI battery status fix (gicco)
	- fix bug 984427 (addressbar ignores backspace when numlock pressed)
	- Polish translation update

1.2.15: 2004-08-09
	- enable locale for icesh

1.2.15pre4: 2004-08-05
	- fix crash/lockup at startup in ACPI status applet when ac module
          not loaded
	- tray icon sizing cleanups
	- fix bug 883518: keyboard gets locked until icewm menu is activated
	- double buffering fixes
	- French translation update
	- Finnish translation update (Taisto Kuikka)
	- menuprogreload menu keyword added (Konstantin Korikov)
	  syntax: menuprogreload title icon timeout command ...
	- battery status display for FreeBSD (Hanspeter Roth)
	- smart snap window positioning triggered by C+S+A+numpad (Bert Wesarg)
	- key to show desktop (Super+D)

1.2.15pre3: 2004-08-01
	- icesound gcc 2.95.3 compile fix (Thomas Zajic)
	- net status support for OpenBSD (Hanspeter Roth)
	- FreeBSD build fix (Hanspeter Roth)
	- basename cleanups for FreeBSD
	- systray cleanups for wine, ...