@@ -142,8 +142,8 @@ XSV(const char *, openCommand,                  0)
 XSV(const char *, terminalCommand,              "xterm")
 XSV(const char *, logoutCommand,                0)
 XSV(const char *, logoutCancelCommand,          0)
-XSV(const char *, shutdownCommand,              "shutdown -h now")
-XSV(const char *, rebootCommand,                "shutdown -r now")
+XSV(const char *, shutdownCommand,              "sudo /sbin/shutdown -h now")
+XSV(const char *, rebootCommand,                "sudo /sbin/shutdown -r now")
 XIV(int, taskBarCPUDelay,			500)
 XIV(int, taskBarNetSamples,                     20)
 XIV(int, taskBarNetDelay,			500)
