@@ -4,6 +4,8 @@
 	  workspace	
 	- fix: build with --disable-taskbar
 	- fix: maximize/restore for rxvt
+	- fix: reboot/shutdown functionality (default configuration 
+	  changed to use 'sudo')
 
 1.2.17pre2: 2004-10-31
 	- fix crash on startup when mailbox or net status disabled
